tg-4626 [FE] Refactor del dialogo del diente para poder implementar typeahead

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -2,8 +2,10 @@
 
 	<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
 		<app-tooth #tooth [toothTreatment]="toothTreatment" (selectedSurfacesEmitter)="reciveSelectedSurfaces($event)"
-			[newFinding]="newHallazgoId" [setFirstProcedure]="firstProcedureId" [setSecondProcedure]="secondProcedureId"
-			[setThirdProcedure]="thirdProcedureId">
+				   [newFinding]="newHallazgoId"
+				   [setFirstProcedure]="firstProcedureId"
+				   [setSecondProcedure]="secondProcedureId"
+				   [setThirdProcedure]="thirdProcedureId">
 		</app-tooth>
 		<div fxLayout="column">
 			<span class="title">Pieza {{data.quadrantCode}}{{data.tooth.code}}</span>
@@ -28,58 +30,62 @@
 		</ng-template>
 	</div>
 
-	<div fxLayout="column">
-		<form [formGroup]="form" (ngSubmit)="confirm()" fxLayout="column">
-			<mat-form-field appearance="outline">
-				<mat-label>Seleccione hallazgo</mat-label>
-				<mat-select formControlName="findingId" name="findingId" (selectionChange)="findingChanged($event)">
-					<mat-option *ngFor="let finding of filteredDiagnostics" [value]="finding.snomed.sctid">
-						<span>{{finding.snomed.pt}}</span>
-					</mat-option>
-				</mat-select>
-			</mat-form-field>
-
-			<div fxLayout="column" formGroupName="procedures">
-
-				<mat-form-field appearance="outline">
-					<mat-label>Seleccione 1er procedimiento</mat-label>
-					<mat-select formControlName="firstProcedureId" name="firstProcedureId"
-						(selectionChange)="firstProcedureChanged()">
-						<mat-option *ngFor="let procedure of filteredProcedures" [value]="procedure.snomed.sctid">
-							<span>{{procedure.snomed.pt}}</span>
-						</mat-option>
-					</mat-select>
-				</mat-form-field>
-
-				<div *ngIf="!selectedSurfaces.length" fxLayout="column">
-					<mat-form-field appearance="outline">
-						<mat-label>Seleccione 2do procedimiento</mat-label>
-						<mat-select formControlName="secondProcedureId" name="secondProcedureId"
-							(selectionChange)="secondProcedureChanged()">
-							<mat-option *ngFor="let procedure of filteredProcedures" [value]="procedure.snomed.sctid">
-								<span>{{procedure.snomed.pt}}</span>
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-
-					<mat-form-field appearance="outline">
-						<mat-label>Seleccione 3er procedimiento</mat-label>
-						<mat-select formControlName="thirdProcedureId" name="thirdProcedureId"
-							(selectionChange)="thirdProcedureChanged()">
-							<mat-option *ngFor="let procedure of filteredProcedures" [value]="procedure.snomed.sctid">
-								<span>{{procedure.snomed.pt}}</span>
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-
-
-			</div>
-
-			<mat-dialog-actions fxLayoutAlign="end end">
-				<button mat-stroked-button color="primary" mat-dialog-close type="button">Cancelar </button>
-				<button mat-raised-button color="primary">Confirmar </button>
-			</mat-dialog-actions>
-		</form>
+	<div>
+		<div *ngIf="!selectedSurfaces.length" fxLayout="column" fxLayoutGap="15px" fxLayoutAlign="center">
+			<app-typeahead
+				id="hallazgo pieza"
+				[placeholder]="'Seleccione hallazgo'"
+				[options]="filteredDiagnosticsTypeaheadOptions"
+				[initValue]="initValueDiagnosticsPieceTypeahead"
+				(selectionChange)="findingChanged($event)"
+			>
+			</app-typeahead>
+			<app-typeahead
+				id="primer procedimiento pieza"
+				[placeholder]="'Seleccione 1er procedimiento'"
+				[options]="filteredProceduresTypeahead"
+				[initValue]="initValueTypeaheadPieceFirstProcedure"
+				(selectionChange)="firstProcedureChanged($event)"
+			>
+			</app-typeahead>
+			<app-typeahead
+				id="segundo procedimiento pieza"
+				[placeholder]="'Seleccione 2do procedimiento'"
+				[initValue]="initValueTypeaheadProcedureTwo"
+				[options]="filteredProceduresTypeahead"
+				(selectionChange)="secondProcedureChanged($event)"
+			>
+			</app-typeahead>
+			<app-typeahead
+				id="tercer procedimiento pieza"
+				[placeholder]="'Seleccione 3er procedimiento'"
+				[initValue]="initValueTypeaheadProcedureThree"
+				[options]="filteredProceduresTypeahead"
+				(selectionChange)="thirdProcedureChanged($event)"
+			>
+			</app-typeahead>
+		</div>
+		<div *ngIf="selectedSurfaces.length" fxLayout="column" fxLayoutGap="15px" fxLayoutAlign="center">
+			<app-typeahead
+				id="hallazgo cara"
+				[placeholder]="'Seleccione hallazgo'"
+				[options]="filteredDiagnosticsTypeaheadOptions"
+				[initValue]="initValueDiagnosticsSurfaceTypeahead"
+				(selectionChange)="findingChanged($event)"
+			>
+			</app-typeahead>
+			<app-typeahead
+				id="primer procedimiento cara"
+				[placeholder]="'Seleccione 1er procedimiento'"
+				[options]="filteredProceduresTypeahead"
+				[initValue]="initValueTypeaheadSurfaceFirstProcedure"
+				(selectionChange)="firstProcedureChanged($event)"
+			>
+			</app-typeahead>
+		</div>
 	</div>
+	<mat-dialog-actions fxLayoutAlign="end end">
+		<button mat-stroked-button color="primary" mat-dialog-close type="button">Cancelar </button>
+		<button mat-raised-button color="primary" (click)="confirm()">Confirmar </button>
+	</mat-dialog-actions>
 </div>
