--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
@@ -7,8 +7,16 @@
 </ng-template>
 
 <ng-template #removeButtonTemplate let-action="action" let-rowIndex="rowIndex" appCtrlTemplate="removeButtonTemplate">
-	<button type="button" mat-icon-button color="warn" (click)="action(rowIndex)">
+	<div align="end">
+	<button  type="button" mat-icon-button color="warn" (click)="action(rowIndex)">
 		<mat-icon>delete_outline</mat-icon>
+	</button>
+	</div>
+</ng-template>
+
+<ng-template #removeButtonTemplate let-action="action" let-rowIndex="rowIndex" appCtrlTemplate="editButtonTemplate">
+	<button type="button" mat-icon-button color="primary"  fxFlex="10%" (click)="action(rowIndex)">
+		<mat-icon>create</mat-icon>
 	</button>
 </ng-template>
 
