tg-4802. [MEJORA]  La solapa activa en pop up 'Agregar vacunas' queda grisado

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
 	<div class="mat-h2" [translate]="'ambulatoria.paciente.vacunas.agregar_vacunas.agregar_vacuna.TITLE'"></div>
-	<button mat-icon-button color="warn" (click)="dialogRef.close();" tabindex="-1">
+	<button mat-icon-button color="warn" (click)="dialogRef.close();">
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
@@ -14,8 +14,7 @@
 					<ng-template mat-tab-label>
 						<span class="color-primary">
 							{{ 'ambulatoria.paciente.vacunas.agregar_vacunas.agregar_vacuna.NEW_VACCINE_TAB' | translate
-							|
-							uppercase }}
+							| uppercase }}
 						</span>
 					</ng-template>
 
